i need to stop forgetting to fix dark mode

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -569,7 +569,7 @@ section[data-background] a:hover {
 
 /* dark mode */
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
 	:root {
 		--background-color: #000;
 
